--- a/AddressBook/Client/Pages/Index.razor
+++ b/AddressBook/Client/Pages/Index.razor
@@ -74,8 +74,8 @@
         }
     }
 
-    public void SelectionChangedEvent(Contact contact){
-        selectedContact = contact;
+    public void SelectionChangedEvent(object contact){
+        selectedContact = (Contact)contact;
     }
 
 
